@@ -1,3 +1,10 @@
+2008-01-07  Akim Demaille  <demaille@gostai.com>
+
+	Missing "done".
+	Update test suite.  Now *much* faster, and green.
+	* src/uconnection.cc, src/uexpression.cc: Space changes.
+	* src/userver.cc: Add a missing DEBUG message.
+
 2008-01-07  Samuel Tardieu  <tardieu@gostai.com>
 
 	Typo.
